--- a/ios/rnHoroscope/Base.lproj/LaunchScreen.xib
+++ b/ios/rnHoroscope/Base.lproj/LaunchScreen.xib
@@ -8,18 +8,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="624"/>
+            <rect key="frame" x="0.0" y="0.0" width="502" height="641"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-oH-3Bx">
-                    <rect key="frame" x="90" y="231" width="300" height="300"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-oH-3Bx">
+                    <rect key="frame" x="101" y="171" width="300" height="300"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="300" id="B49-1M-AOj"/>
                         <constraint firstAttribute="height" constant="300" id="D79-zX-WxH"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="RN Horoscope" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mxw-IE-53u">
-                    <rect key="frame" x="-60" y="58" width="441" height="43"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RN Horoscope" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mxw-IE-53u">
+                    <rect key="frame" x="20" y="68" width="463" height="43"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" none="YES"/>
                     </accessibility>
@@ -33,12 +33,15 @@
                 <accessibilityTraits key="traits" staticText="YES"/>
             </accessibility>
             <constraints>
+                <constraint firstItem="Mxw-IE-53u" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="68" id="2j6-tv-aD7"/>
+                <constraint firstItem="Mxw-IE-53u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="GgL-iG-vUL"/>
                 <constraint firstItem="hpi-oH-3Bx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="QZX-z4-lH9"/>
                 <constraint firstItem="hpi-oH-3Bx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bOh-vD-4L2"/>
+                <constraint firstAttribute="trailing" secondItem="Mxw-IE-53u" secondAttribute="trailing" constant="19" id="drV-Jv-4gF"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="339" y="448"/>
+            <point key="canvasLocation" x="328" y="456.5"/>
         </view>
     </objects>
     <resources>
